hamburger fix + some style fixes
hamburger in mobile version fix
balance moved to the toggled menu
courses button style fix

--- a/src/AngularProject/src/app/components/course/course.component.html
+++ b/src/AngularProject/src/app/components/course/course.component.html
@@ -30,11 +30,18 @@
       </div>
 
       <!-- Кнопки -->
-      <div class="d-flex">
+      <div class="d-flex justify-content-between">
         <div>
-          <button class="btn buy" [ngClass]="{'btn cancel': isBooked}" (click)="toggleReservation()">
-            {{ isBooked ? 'Cancel' : 'Reserve' }}
-          </button>
+          <button
+          class="btn"
+          [ngClass]="{
+            'buy': !isBooked,
+            'cancel': isBooked
+          }"
+          (click)="toggleReservation()"
+        >
+          {{ isBooked ? 'Cancel' : 'Reserve' }}
+        </button>
         </div>
         <div class="ms-sm-auto">
           <a class="btn info" [routerLink]="['/course', course.id]">More info</a>
