--- a/src/AngularProject/src/app/components/calendar/calendar.component.html
+++ b/src/AngularProject/src/app/components/calendar/calendar.component.html
@@ -1,14 +1,12 @@
 <div class="calendar-container">
   <main class="calendar-main">
       <header class="calendar-header">
-         
             <button class="month-button" (click)="toggleMonthMenu()">Month <i class="bi"  [ngClass]="showMonthMenu ? 'bi bi-chevron-up fs-5' : 'bi bi-chevron-down fs-5'"></i></button>
             <h2>{{ getMonthName() }} {{ year }}</h2>
             <a class="reservation-button btn" href="#courses"><i class="bi bi-plus-circle fs-5"></i> Reservation</a>
- 
       </header>
 
-      <!-- Menu s mesiacmi -->
+      <!-- Month's menu -->
       <div *ngIf="showMonthMenu" class="month-menu">
           <div class="month-cell-mn" *ngFor="let monthName of months; let i = index" (click)="selectMonth(i)">
               {{ monthName }}
