--- a/src/AngularProject/src/app/components/navigation/navigation.component.scss
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.scss
@@ -99,6 +99,7 @@ body{
 #navigation-bar{
     white-space: nowrap;
 }
+
 #notification-button {
   background-color: white;
   border: none;
@@ -112,7 +113,7 @@ body{
   justify-content: center;
 }
 
-#notification-button:hover {
+#notification-button:hover{
   background-color: #f5f5f5;
   box-shadow: 0 2px 10px rgba(0,0,0,0.15);
 }
@@ -131,6 +132,10 @@ body{
     align-items: center;
     gap: 10px;
     align-self: end;
+}
+
+.nav-balance:hover .nav-balance-mobile:hover{
+  background-color: #b71c1c;
 }
 
 
@@ -209,6 +214,11 @@ body{
     gap: 6px;
     font-size: 12pt;
     font-weight: bold;
+  }
+
+  .balance-mobile:hover{
+    background-color: #b71c1c;
+    color: white;
   }
   
   .balance-mobile .icon {
