--- a/src/AngularProject/src/app/pages/signup/signup.page.html
+++ b/src/AngularProject/src/app/pages/signup/signup.page.html
@@ -117,4 +117,11 @@
         </form>
     </div>
     <p id="login-text" class="mt-3">Already have an account?<button id="login-btn" routerLink="../login">Log in</button></p>
+
+    <div *ngIf="isLoading" class="loading-overlay">
+        <div class="spinner-border custom-color" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
 </div>
