--- a/src/AngularProject/src/app/pages/signup/signup.page.scss
+++ b/src/AngularProject/src/app/pages/signup/signup.page.scss
@@ -134,3 +134,20 @@ input:focus {
   text-align: center;
   font-size: 14px;
 }
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner-border.custom-color {
+  color: #EA2839; /* pink, for example */
+}
